// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/ActionsMenu defaultActionsMenu 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 iwLWxX"
  data-testid={null}
>
  <div
    className="ActionsMenu__Wrapper-yvbni2-0 dNblPG"
  >
    <button
      className="ActionsMenu__Control-yvbni2-1 caVsMX"
      onClick={[Function]}
    >
      <div
        className="ActionsMenu__Icon-yvbni2-2 eubGjt"
      />
    </button>
    <div
      className="ActionsMenu__Menu-yvbni2-3 kDrEVi"
    >
      <a
        href="#"
      >
        Open details in new tab
      </a>
      <button>
        Edit
      </button>
      <button>
        Remove
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ActionsMenu leftOffsetActionsMenu 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 iwLWxX"
  data-testid={null}
>
  <div
    className="Flex__FlexWrapper-sc-1f3kfw7-0 clzqgD"
    display="flex"
  >
    <div
      className="ActionsMenu__Wrapper-yvbni2-0 dNblPG"
    >
      <button
        className="ActionsMenu__Control-yvbni2-1 caVsMX"
        onClick={[Function]}
      >
        <div
          className="ActionsMenu__Icon-yvbni2-2 eubGjt"
        />
      </button>
      <div
        className="ActionsMenu__Menu-yvbni2-3 jDXKDl"
        direction="left"
      >
        <a
          href="#"
        >
          Open details in new tab
        </a>
        <button>
          Edit
        </button>
        <button>
          Remove
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Units/ActionsMenu Default actions menu 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 gFkEUh"
  data-testid={null}
>
  <div
    className="ActionsMenu__Wrapper-yvbni2-0 dNblPG"
  >
    <button
      className="ActionsMenu__Control-yvbni2-1 caVsMX"
      onClick={[Function]}
    >
      <div
        className="ActionsMenu__Icon-yvbni2-2 eubGjt"
      />
    </button>
    <div
      className="ActionsMenu__Menu-yvbni2-3 kDrEVi"
    >
      <a
        href="#"
      >
        Open details in new tab
      </a>
      <button>
        Edit
      </button>
      <button>
        Remove
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Units/ActionsMenu Left offset actions menu 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 gFkEUh"
  data-testid={null}
>
  <div
    className="Flex__FlexWrapper-sc-1f3kfw7-0 clzqgD"
    display="flex"
  >
    <div
      className="ActionsMenu__Wrapper-yvbni2-0 dNblPG"
    >
      <button
        className="ActionsMenu__Control-yvbni2-1 caVsMX"
        onClick={[Function]}
      >
        <div
          className="ActionsMenu__Icon-yvbni2-2 eubGjt"
        />
      </button>
      <div
        className="ActionsMenu__Menu-yvbni2-3 jDXKDl"
        direction="left"
      >
        <a
          href="#"
        >
          Open details in new tab
        </a>
        <button>
          Edit
        </button>
        <button>
          Remove
        </button>
      </div>
    </div>
  </div>
</div>
`;
